# qd

./: README.md  pyproject.toml
docs/plans/: 2026-02-26-qd-design.md  2026-02-26-qd-implementation.md
src/qd/: cli.py  display.py  git.py
tests/: test_git.py
